--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,7 +73,7 @@ steps:
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
 - bash: |
     ACR_RESOURCE_ID=$(cat $(TerraformRegistry.jsonOutputVariablesPath) | jq '.acr_resource_id.value' -r)
-    echo "##vso[task.setvariable variable=Staging.Acr.ResourceId]$ACR_RESOURCE_ID
+    echo "##vso[task.setvariable variable=Staging.Acr.ResourceId]$ACR_RESOURCE_ID"
   displayName: "Parsing Terraform Outputs"
 - task: TerraformTaskV1@0
   displayName: "Terraform Init"
