--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -126,6 +126,9 @@ steps:
       echo "acquiring credentials for cluster"
       az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
 
+      echo "installing flux. adding fluxcd helm repo"
+      helm repo add fluxcd https://charts.fluxcd.io
+
       echo "installing flux. creating namespace"
       kubectl create ns flux
 
