--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,6 +148,7 @@ steps:
       echo "acquiring public ssh key for flux"
       STAGING_SSH_PUBLIC_KEY=$(fluxctl identity --k8s-fwd-ns flux)
       echo "##vso[task.setvariable variable=Staging.Flux.SshPublicKey;issecret=true]$STAGING_SSH_PUBLIC_KEY"
+  continueOnError: false
 - task: TerraformTaskV1@0
   displayName: "Terraform Init - Manifests"
   inputs:
