--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -141,7 +141,8 @@ steps:
       echo "installing flux. installing the helm operator"
       helm upgrade -i helm-operator fluxcd/helm-operator \
         --set git.ssh.secretName=flux-git-deploy \
-        --namespace flux
+        --namespace flux \
+        --set helm.versions=v3
       
       sleep 5
       
