--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -131,8 +131,8 @@ steps:
       echo "installing flux. adding fluxcd helm repo"
       helm repo add fluxcd https://charts.fluxcd.io
 
-      echo "installing flux. creating namespace"
-      kubectl create ns flux
+      # echo "installing flux. creating namespace"
+      # kubectl create ns flux
 
       echo "installing flux. installing the main operator"
       
