Setting a specific kubernetes version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -193,9 +193,6 @@ steps:
     inlineScript: |
       set -e #stop script on first error
 
-      echo "setting timezone to EST"
-      sudo timedatectl set-timezone "America/New_York"
-
       echo "installing linkerd"
       # Specify the Linkerd version that will be leveraged throughout these instructions
       LINKERD_VERSION=$(LinkerdVersion)
@@ -208,5 +205,6 @@ steps:
       echo "Running pre-checks with Linkerd"
       linkerd check --pre
   continueOnError: false
+  enabled: false
     
       
