--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ variables:
  - group: 'global'
  - name: LinkerdVersion
    value: stable-2.7.0
+ - name: system.debug
+   value: true
 steps:
 - task: AzureCLI@2
   inputs:
@@ -53,7 +55,7 @@ steps:
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
     backendAzureRmContainerName: '$(TerraformBackend.ContainerName)'
     backendAzureRmKey: 'global/terraform.tfstate'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/global/'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/global'
 - task: TerraformTaskV1@0
   displayName: "Terraform Plan"
   inputs:
@@ -64,7 +66,7 @@ steps:
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
     backendAzureRmContainerName: '$(TerraformBackend.ContainerName)'
     backendAzureRmKey: 'global/terraform.tfstate'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/global/'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/global'
 - task: TerraformTaskV1@0
   name: TerraformRegistry
   displayName: "Terraform Apply Container Registry"
@@ -99,7 +101,7 @@ steps:
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
     backendAzureRmContainerName: '$(TerraformBackend.ContainerName)'
     backendAzureRmKey: 'infrastructure/terraform.tfstate'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging'
     commandOptions: |
       -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)" -var "acr_resource_id=$(ACR_RESOURCE_ID)"
 - task: TerraformTaskV1@0
