--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -132,6 +132,9 @@ steps:
       echo "acquiring credentials for cluster"
       az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
 
+      echo "creating flux namespace"
+      kubectl create ns flux
+
       echo "installing flux. adding fluxcd helm repo"
       helm repo add fluxcd https://charts.fluxcd.io
 
