waiting for flux to install

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -143,18 +143,17 @@ steps:
       
       helm upgrade -i flux fluxcd/flux \
         --set git.url=$(ManifestsRepoUrl) \
-        --namespace flux
+        --namespace flux \
+        --wait
 
       echo "installing flux. installing the helm operator"
       helm upgrade -i helm-operator fluxcd/helm-operator \
         --set git.ssh.secretName=flux-git-deploy \
         --namespace flux \
+        --wait \
         --set helm.versions=v3 \
         --set configureRepositories.enable=true \
         --set configureRepositories.repositories[0].name=$(ACR.Name),configureRepositories.repositories[0].url=$(ACR.Url),configureRepositories.repositories[0].username=$(KubernetesServicePrincipal.ClientId),configureRepositories.repositories[0].password=$(KubernetesServicePrincipal.ClientSecret)
-
-      
-      sleep 5
       
       echo "acquiring public ssh key for flux"
       STAGING_SSH_PUBLIC_KEY=$(fluxctl identity --k8s-fwd-ns flux)
