--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,8 +133,11 @@ steps:
       echo "acquiring credentials for cluster"
       az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
 
-      echo "creating flux namespace"
-      kubectl create ns flux
+      echo "ensuring flux namespace exists"
+      echo 'apiVersion: v1
+kind: Namespace
+metadata:
+  name:  flux' | kubectl apply -f
 
       echo "installing flux. adding fluxcd helm repo"
       helm repo add fluxcd https://charts.fluxcd.io
