refactoring the pipeline a bit

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -189,39 +189,32 @@ steps:
     commandOptions: |
       -var "staging_ssh_public_key=$(Staging.Flux.SshPublicKey)" -var "github_token=$(GitHub.fgauna12.PersonalAccessToken)"
   continueOnError: true
-- task: AzureCLI@2
-  displayName: Install Linkerd
-  inputs:
-    azureSubscription: 'nebbia-partner-service-connection'
-    scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      set -e
+- bash: |
+    set -e
 
-      echo "installing linkerd"
-      # Specify the Linkerd version that will be leveraged throughout these instructions
-      LINKERD_VERSION=$(LinkerdVersion)
+    echo "installing linkerd"
+    # Specify the Linkerd version that will be leveraged throughout these instructions
+    LINKERD_VERSION=$(LinkerdVersion)
 
-      curl -sLO "https://github.com/linkerd/linkerd2/releases/download/$LINKERD_VERSION/linkerd2-cli-$LINKERD_VERSION-linux"
+    curl -sLO "https://github.com/linkerd/linkerd2/releases/download/$LINKERD_VERSION/linkerd2-cli-$LINKERD_VERSION-linux"
 
-      sudo cp ./linkerd2-cli-$LINKERD_VERSION-linux /usr/local/bin/linkerd
-      sudo chmod +x /usr/local/bin/linkerd
+    sudo cp ./linkerd2-cli-$LINKERD_VERSION-linux /usr/local/bin/linkerd
+    sudo chmod +x /usr/local/bin/linkerd
 
-      FLUX_NAMESPACE=$(kubectl get ns -o json | jq '.items[].metadata.name | select(.=="flux")')
-      if [ -z "$FLUX_NAMESPACE" ]
-      then
-        echo "Linkerd not installed. Installing Linkerd"
-        echo "Running pre-checks with Linkerd"
-        linkerd check --pre
+    FLUX_NAMESPACE=$(kubectl get ns -o json | jq '.items[].metadata.name | select(.=="flux")')
+    if [ -z "$FLUX_NAMESPACE" ]
+    then
+      echo "Linkerd not installed. Installing Linkerd"
+      echo "Running pre-checks with Linkerd"
+      linkerd check --pre
 
-        echo "Installing Linkerd"
-        linkerd install | kubectl apply -f -
-      else 
-        echo "Linkerd already installed"
-      fi
-      echo "Checking installation"
-      linkerd check
+      echo "Installing Linkerd"
+      linkerd install | kubectl apply -f -
+    else 
+      echo "Linkerd already installed"
+    fi
+    echo "Checking installation"
+    linkerd check
   continueOnError: false
-  enabled: true
     
       
