Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,6 +138,7 @@ steps:
       
       helm upgrade -i flux fluxcd/flux \
         --set git.url=$(ManifestsRepoUrl) \
+        --set git.path=$(ManifestsRepoK8sDirectory) \
         --namespace flux \
         --wait
 
