Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -142,7 +142,7 @@ steps:
       helm upgrade -i flux fluxcd/flux \
         --set git.url=$(ManifestsRepoUrl) \
         --set git.path=$(ManifestsRepoK8sDirectory) \
-        --set registry.acr.enabled=true
+        --set registry.acr.enabled=true \
         --namespace flux \
         --wait
 
