--- a/k8s/releases/realworld-backend.yml
+++ b/k8s/releases/realworld-backend.yml
@@ -5,7 +5,7 @@ metadata:
   name: realworld-backend
   namespace: realworld
   fluxcd.io/automated: "true"
-  fluxcd.io/tag.chart-tag: glob:stg-*
+  fluxcd.io/tag.chart-image: glob:stg-*
 spec:
   releaseName: realworld-backend
   chart:
