--- a/k8s/releases/realworld-backend.yml
+++ b/k8s/releases/realworld-backend.yml
@@ -4,8 +4,9 @@ kind: HelmRelease
 metadata:
   name: realworld-backend
   namespace: realworld
-  fluxcd.io/automated: "true"
-  fluxcd.io/tag.chart-image: glob:stg-*
+  annotations:
+    fluxcd.io/automated: "true"
+    fluxcd.io/tag.chart-image: glob:stg-*
 spec:
   releaseName: realworld-backend
   chart:
