--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -216,5 +216,23 @@ steps:
     echo "Checking installation"
     linkerd check
   continueOnError: false
+  displayName: "Installing Linkerd"
+- bash: |
+    set -e
+
+    echo "installing flagger"
+
+    helm repo add flagger https://flagger.app
+
+    kubectl apply -f https://raw.githubusercontent.com/weaveworks/flagger/master/artifacts/flagger/crd.yaml
+
+    helm upgrade -i flagger flagger/flagger \
+      --namespace=linkerd \
+      --set crd.create=false \
+      --set meshProvider=linkerd \
+      --set metricsServer=http://linkerd-prometheus:9090
+  continueOnError: false
+  displayName: "Installing Flagger"
+
     
       
