--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,8 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
 
+    working-directory: ./iac/staging
+
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
