--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,6 +62,11 @@ jobs:
       run:
         shell: bash
         working-directory: ./iac/staging
+        
+    env:
+      TERRAFORM_BACKEND_RESOURCE_GROUP: rg-terraform-staging
+      TERRAFORM_BACKEND_STORAGE_ACCOUNT: stterraformstg001
+      TERRAFORM_BACKEND_CONTAINER_NAME: staging  
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -80,6 +85,25 @@ jobs:
         # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    - name: Azure CLI Action
+      uses: Azure/cli@v1.0.0
+      with:
+        # Specify the script here
+        inlineScript: |
+          az group create --location eastus --name $TERRAFORM_BACKEND_RESOURCE_GROUP
+      
+          az storage account create --name $TERRAFORM_BACKEND_STORAGE_ACCOUNT --resource-group $TERRAFORM_BACKEND_RESOURCE_GROUP --location eastus --sku Standard_LRS
+
+          az storage container create --name $TERRAFORM_BACKEND_CONTAINER_NAME --account-name $TERRAFORM_BACKEND_STORAGE_ACCOUNT
+
+          STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $TERRAFORM_BACKEND_RESOURCE_GROUP -n $TERRAFORM_BACKEND_STORAGE_ACCOUNT | jq ".[0].value" -r)
+
+          echo "setting storage account key variable"
+          echo "::set-env name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY"
+          
+        # Azure CLI version to be used to execute the script. If not provided, latest version is used
+        azcliversion: latest
+    
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
