--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,13 +91,13 @@ jobs:
         
         # Specify the script here
         inlineScript: |
-          az group create --location eastus --name $TERRAFORM_BACKEND_RESOURCE_GROUP
+          az group create --location eastus --name ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }}
       
-          az storage account create --name $TERRAFORM_BACKEND_STORAGE_ACCOUNT --resource-group $TERRAFORM_BACKEND_RESOURCE_GROUP --location eastus --sku Standard_LRS
+          az storage account create --name ${{ env.TERRAFORM_BACKEND_STORAGE_ACCOUNT }} --resource-group ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }} --location eastus --sku Standard_LRS
 
-          az storage container create --name $TERRAFORM_BACKEND_CONTAINER_NAME --account-name $TERRAFORM_BACKEND_STORAGE_ACCOUNT
+          az storage container create --name ${{ env.TERRAFORM_BACKEND_CONTAINER_NAME }} --account-name ${{ env.TERRAFORM_BACKEND_STORAGE_ACCOUNT }}
 
-          STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $TERRAFORM_BACKEND_RESOURCE_GROUP -n $TERRAFORM_BACKEND_STORAGE_ACCOUNT | jq ".[0].value" -r)
+          STORAGE_ACCOUNT_KEY=$(az storage account keys list -g ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }} -n ${{ env.TERRAFORM_BACKEND_STORAGE_ACCOUNT }} | jq ".[0].value" -r)
 
           echo "setting storage account key variable"
           echo "::set-env name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY"
