disabling coupling to acr

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -115,6 +115,9 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan
+      env: 
+        TF_VAR_aks_service_principal_client_id: ${{ secrets.AKS_CLIENT_ID }}
+        TF_VAR_aks_service_principal_client_secret: ${{ secrets.AKS_CLIENT_SECRET }}
 
       # On push to master, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
