--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,7 +87,7 @@ jobs:
 
     - name: Azure CLI Action
       uses: Azure/cli@v1.0.0
-      with:        
+      with:
         # Specify the script here
         inlineScript: |
           az group create --location eastus --name ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }}
@@ -118,6 +118,10 @@ jobs:
       env: 
         TF_VAR_aks_service_principal_client_id: ${{ secrets.AKS_CLIENT_ID }}
         TF_VAR_aks_service_principal_client_secret: ${{ secrets.AKS_CLIENT_SECRET }}
+        ARM_CLIENT_ID: ${{ secrets.PIPELINE_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.PIPELINE_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.PIPELINE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.PIPELINE_TENANT_ID }}
 
       # On push to master, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
