--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,7 +45,8 @@ jobs:
         # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Azure CLI Actionhttps://www.measureup.com/az-400-microsoft-azure-devops-solutions.html
+    - name: Azure CLI Action
+      id: terraform-setup
       uses: Azure/cli@v1.0.0
       with:
         # Specify the script here
@@ -59,7 +60,7 @@ jobs:
           STORAGE_ACCOUNT_KEY=$(az storage account keys list -g ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }} -n ${{ env.TERRAFORM_BACKEND_STORAGE_ACCOUNT }} | jq ".[0].value" -r)
 
           echo "setting storage account key variable"
-          echo "::set-env name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY"
+          echo "::set-output name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY"
           
         # Azure CLI version to be used to execute the script. If not provided, latest version is used
         azcliversion: latest
@@ -67,6 +68,8 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      env:
+        ARM_ACCESS_KEY: ${{ secrets[steps.terraform-setup.outputs.ARM_ACCESS_KEY] }} 
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
@@ -74,7 +77,9 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan        
+      run: terraform plan
+      env:
+        ARM_ACCESS_KEY: ${{ secrets[steps.terraform-setup.outputs.ARM_ACCESS_KEY] }} 
 
       # On push to master, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -90,6 +95,6 @@ jobs:
         az extension add --name connectedk8s
         az extension add --name k8sconfiguration
 
-    
+
     
 
