--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,7 +60,7 @@ jobs:
           STORAGE_ACCOUNT_KEY=$(az storage account keys list -g ${{ env.TERRAFORM_BACKEND_RESOURCE_GROUP }} -n ${{ env.TERRAFORM_BACKEND_STORAGE_ACCOUNT }} | jq ".[0].value" -r)
 
           echo "setting storage account key variable"
-          echo "::set-output name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY"
+          echo "::set-output name=ARM_ACCESS_KEY::$STORAGE_ACCOUNT_KEY issecret=true"
           
         # Azure CLI version to be used to execute the script. If not provided, latest version is used
         azcliversion: latest
