--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,13 +64,20 @@ jobs:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: terraform apply -auto-approve
 
-    - name: Helm 
-      run: helm
-
-    - name: Azure CLI add azure arc
+    - name: Install Azure Arc Extensions
       run: |
         az extension add --name connectedk8s
         az extension add --name k8sconfiguration
+
+    - name: Connect Cluster to Azure Arc
+      run: |
+        AKS_CLUSTER_NAME=$(terraform output -no-color cluster_name)
+        AKS_RESOURCE_GROUP=$(terraform output -no-color resource_group_name)
+        az connectedk8s connect --name $AKS_CLUSTER_NAME --resource-group $AKS_RESOURCE_GROUP
+
+    
+    
+
 
 
     
