--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,12 +69,24 @@ jobs:
         az extension add --name connectedk8s
         az extension add --name k8sconfiguration
 
-    - name: Connect Cluster to Azure Arc
+    - name: Connect Cluster to Azure Arc and Configure GitOps
       run: |
         AKS_CLUSTER_NAME=$(terraform output -no-color cluster_name)
         AKS_RESOURCE_GROUP=$(terraform output -no-color resource_group_name)
         az aks get-credentials -g $AKS_RESOURCE_GROUP -n $AKS_CLUSTER_NAME
         az connectedk8s connect --name $AKS_CLUSTER_NAME --resource-group $AKS_RESOURCE_GROUP
+
+        az k8sconfiguration create \
+          ---name azure-arc-sample \
+          --resource-group $AKS_RESOURCE_GROUP --cluster-name $AKS_CLUSTER_NAME \
+          --operator-instance-name flux --operator-namespace flux \
+          --operator-params='--git-readonly --git-path=k8s/releases' \
+          --enable-helm-operator --helm-operator-version='1.2.0' \
+          --helm-operator-params='--set helm.versions=v3' \
+          --repository-url https://github.com/${{ env.GITHUB_REPOSITORY }}.git  \
+          --scope namespace --cluster-type connectedClusters
+
+
 
     
     
