fixing helm operator

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -80,8 +80,8 @@ jobs:
           --name realworld \
           --resource-group $AKS_RESOURCE_GROUP --cluster-name $AKS_CLUSTER_NAME \
           --operator-instance-name flux --operator-namespace flux \
-          --operator-params='--git-readonly --git-path=k8s/releases' \
-          --enable-helm-operator \
+          --operator-params='--git-readonly --git-path=k8s' \
+          --enable-helm-operator --helm-operator-version='0.6.0' \
           --helm-operator-params='--set helm.versions=v3' \
           --repository-url https://github.com/${{ env.GITHUB_REPOSITORY }}.git  \
           --scope namespace --cluster-type connectedClusters
